[package]
name = "gitlobster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["cargo", "derive"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[profile]
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
