[package]
name = "gitlobster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
urlencoding = "2"
pbr = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"

[dev-dependencies]
subprocess = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[features]
integration_tests = []

[profile]
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
