[package]
name = "gitlobster"
version = "1.4.2"
edition = "2021"
description = "A tool for cloning all available repositories in a GitLab instance"
categories = ["development-tools", "command-line-utilities"]
keywords = ["gitlab", "gitlobster"]
authors = ["Evgeniy <ea@lowit.ru>"]
homepage = "https://github.com/lowitea/gitlobster"
repository = "https://github.com/lowitea/gitlobster"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "gitlobster"

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
urlencoding = "2"
pbr = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"

[dev-dependencies]
subprocess = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[features]
integration_tests = []

[profile]
[profile.release]
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1
